Docs : 태그 리팩토링 작업 관련 전체 태그 수정 작업
전체 태그 수정 작업 (소문자로 변경)

--- a/_posts/2021-07-01-TIL.md
+++ b/_posts/2021-07-01-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210701 TIL
+title : 20210701 TIL
 date : 2021-07-01 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 오늘 회식때문에 12시 넘어서 집에 도착했다.. 이틀 연속 3시간 수면의 여파때문인지 도저히 1시간을 채울 수 없었다😢
