--- a/_posts/2021-07-02-TIL.md
+++ b/_posts/2021-07-02-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210702 TIL
+title : 20210702 TIL
 date : 2021-07-02 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 예전부터 느꼈지만 요즘 더 뼈저리게 느끼는건데 모든 것엔 기초를 탄탄하게 다지는게 정말 중요하다.
