--- a/_posts/2021-07-03-TIL.md
+++ b/_posts/2021-07-03-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210703 TIL
+title : 20210703 TIL
 date : 2021-07-03 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 이틀 연속 3시간 수면의 여파가 지금까지 오다니.. 체력 무슨일이야..? 주말엔 공부가 힘들 것 같아 되도록 오전공부를 하려고했는데, 11시반에 기상해서 계획을 시원하게 말아먹었다😂
