--- a/_posts/2021-07-04-TIL.md
+++ b/_posts/2021-07-04-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210704 TIL
+title : 20210704 TIL
 date : 2021-07-04 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 블로그 업데이트를 위해서 구글링을 하면서 수정하다보니 카카오 기술블로그도 jekyll 테마를 적용했다는 것을 알았다. 앞으로 기술블로그를 꾸밀 때 참고하면 좋을 것 같다.
