--- a/_posts/2021-07-04-TIL2-W26.md
+++ b/_posts/2021-07-04-TIL2-W26.md
@@ -1,8 +1,7 @@
 ---
-title: 20210629 ~ 20210704 TIL - W26 주간회고
+title : 20210629 ~ 20210704 TIL - W26 주간회고
 date : 2021-07-04 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 공부를 시작하면서 인스타그램 계정도 새로 파고 타이머 어플도 설치하면서 공부하는 습관을 들이는데 집중하려고 했는데 나름 작심삼일 안하고 잘 지킨 것 같다.
