--- a/_posts/2021-07-06-TIL.md
+++ b/_posts/2021-07-06-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210706 TIL
+title : 20210706 TIL
 date : 2021-07-06 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 오늘은 7시반인줄 알고 통근버스를 타러 나왔더니 6시반이었다😂😂 (내 정신머리 어디갔니?)
