--- a/_posts/2021-07-08-TIL.md
+++ b/_posts/2021-07-08-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210708 TIL
+title : 20210708 TIL
 date : 2021-07-08 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 깃허브 블로그 꾸준히 포스팅 할 수 있도록 노력해야지😊  
