--- a/_posts/2021-07-09-TIL.md
+++ b/_posts/2021-07-09-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210709 TIL
+title : 20210709 TIL
 date : 2021-07-09 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 오늘 아침부터 갑사 직원의 막말을 들었더니, 이런 얘기를 들으면서 일해야하나 자괴감도 들고 일도 하기 싫고 기분도 하루종일 안좋았다🤬🔥🔥  
