--- a/_posts/2021-07-10-TIL.md
+++ b/_posts/2021-07-10-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210710 TIL
+title : 20210710 TIL
 date : 2021-07-10 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 오늘 책을 많이 읽으려고 했는데, 생각보다 많이 못읽었네😢  
