--- a/_posts/2021-07-11-TIL.md
+++ b/_posts/2021-07-11-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210711 TIL
+title : 20210711 TIL
 date : 2021-07-11 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 주말엔 Dayoff를 해야하나..(나약한 나 자신 반성해)   
