--- a/_posts/2021-07-11-TIL2-W27.md
+++ b/_posts/2021-07-11-TIL2-W27.md
@@ -1,8 +1,7 @@
 ---
-title: 20210705 ~ 20210711 TIL - W27 주간회고
+title : 20210705 ~ 20210711 TIL - W27 주간회고
 date : 2021-07-11 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 공부를 시작한지 두번째 주도 포기하지 않고 잘 해낸 것 같아서 다행이다.   
