--- a/_posts/2021-07-12-TIL.md
+++ b/_posts/2021-07-12-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210712 TIL
+title : 20210712 TIL
 date : 2021-07-12 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 오늘 회사에서 CI/CD 구축을 해보려고 기술문서와 다른분들이 한 것들을 다 읽어봤는데, 로컬 환경에서 구축할 수 있는건지 Gitlab 서버에 구축을 해야하는건지 근본적인 내용은 알 수가 없었다..   
