--- a/_posts/2021-06-30-TIL.md
+++ b/_posts/2021-06-30-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210630 TIL
+title : 20210630 TIL
 date : 2021-06-30 00:00:00+0900
-tags:
-- TIL
+tags : [til]
 ---
 
 DDD라는 개념에 대해 자세히 찾아봤다. 도메인 중심으로 설계하는 개념인데, 이벤트 스토밍 방법도 매우 흥미롭다. 나중에 프로젝트 할 때 적용해보고싶다.
