--- a/_posts/2021-07-07-TIL.md
+++ b/_posts/2021-07-07-TIL.md
@@ -1,8 +1,7 @@
 ---
-title: 20210707 TIL
+title : 20210707 TIL
 date : 2021-07-07 00:00:00+0900
-tags: 
-- TIL
+tags : [til]
 ---
 
 오늘 필라테스 하고 공부 할 수 있을까 했는데.. 하긴 했다!! 근데 막판에 잠들어서 1시간은 빼도 될 것 같다😅
