--- a/_posts/2021-07-13-TIL.md
+++ b/_posts/2021-07-13-TIL.md
@@ -1,7 +1,7 @@
 ---
 title : 20210713 TIL
 date : 2021-07-13 00:00:00+0900
-tags : [TIL]
+tags : [til]
 ---
 
 Gitlab CI/CD 구축 관련해서 Docker도 설치하고 할 수 있는건 다 해봤는데, 계속 401 Unauthorized 오류가 떴다.   
