feat : disqus 댓글 기능 추가
- disqus 댓글 기능 추가로 Config 수정
- 포스트에 comments 기능 추가 (테스트용)

--- a/_posts/2021-07-18-TIL2-W28.md
+++ b/_posts/2021-07-18-TIL2-W28.md
@@ -2,6 +2,7 @@
 title : 20210712 ~ 20210718 TIL - W28 주간회고
 date : 2021-07-18 00:00:00+0900
 tags : [til]
+comments : true
 ---
 
 주말공부의 양은.. 정말 늘리기 힘든 것인가😭   
