fix : TIL 읽기 오류 수정
TIL 클릭 시 가장 최근 문서만 불러오는 문제 발생으로 문서 이름 수정

--- a/_posts/2021-07-04-wil-2021-W26.md
+++ b/_posts/2021-07-04-wil-2021-W26.md
@@ -1,5 +1,5 @@
 ---
-title : 20210629 ~ 20210704 TIL - W26 주간회고
+title : \[TIL] 20210629 ~ 20210704 - W26 주간회고
 date : 2021-07-04 00:00:00+0900
 tags : [til]
 ---
