--- a/_posts/2021-07-18-wil-2021-W28.md
+++ b/_posts/2021-07-18-wil-2021-W28.md
@@ -1,5 +1,5 @@
 ---
-title : 20210712 ~ 20210718 TIL - W28 주간회고
+title : \[TIL] 20210712 ~ 20210718 - W28 주간회고
 date : 2021-07-18 00:00:00+0900
 tags : [til]
 ---
