--- a/_posts/2021-07-11-wil-2021-W27.md
+++ b/_posts/2021-07-11-wil-2021-W27.md
@@ -1,5 +1,5 @@
 ---
-title : 20210705 ~ 20210711 TIL - W27 주간회고
+title : \[TIL] 20210705 ~ 20210711 - W27 주간회고
 date : 2021-07-11 00:00:00+0900
 tags : [til]
 ---
