--- a/_posts/2021-12-09-F-Lab-W01.md
+++ b/_posts/2021-12-09-F-Lab-W01.md
@@ -2,7 +2,7 @@
 layout: posts 
 title : \[F-Lab] 멘토링 1주차 회고
 date : 2021-12-09 00:00:00+0900 
-categories: [posts, til, flab]
+categories: [posts, til]
 tags : [fLab,til]
 toc: true toc_sticky: ture
 ---
