--- a/_posts/2021-12-09-F-Lab-W01.md
+++ b/_posts/2021-12-09-F-Lab-W01.md
@@ -2,9 +2,10 @@
 layout: posts 
 title : \[F-Lab] 멘토링 1주차 회고
 date : 2021-12-09 00:00:00+0900 
-categories: [posts, til]
+categories: [posts, til, fLab]
 tags : [fLab,til]
-toc: true toc_sticky: ture
+toc: true 
+toc_sticky: ture
 ---
 
 ## 👏 들어가기 앞서,
