docs : F-Lab 실시간 멘토링 2주차 회고록 포스팅
- F-Lab 실시간 멘토링 2주차 회고록 포스팅

--- a/_posts/2021-12-09-F-Lab-W01.md
+++ b/_posts/2021-12-09-F-Lab-W01.md
@@ -32,7 +32,7 @@ toc_sticky: ture
 이 때 대기업이나 유니콘 회사에 추천을 해주시겠다는 분들이 꽤 계셨지만, 기술 면접에 제대로 된 대답을 할 수 없을 것 같았고 추천을 해주신 분들께 피해가 갈 것 같다는 생각이 들어서 전부 정중히 사양했다. 그리고
 퇴근 후 4시간 이상씩 공부에 매달렸다.
 
-그러던 중 친하게 지내는 개발자에게 한 개의 [링크](https://namu.wiki/w/%EC%8B%9C%EC%8A%A4%ED%85%9C%20%ED%86%B5%ED%95%A9) 를 받았고, SI 개발자에 대한
+그러던 중 친하게 지내는 개발자에게 한 개의 [링크](https://namu.wiki/w/%EC%8B%9C%EC%8A%A4%ED%85%9C%20%ED%86%B5%ED%95%A9){:target="_blank"} 를 받았고, SI 개발자에 대한
 인식이 그리 좋지 않다는 사실을 알았다. 적지 않은 충격을 받았던 것 같다.
 
 '이제는 IT 서비스 회사에서 더 나은 성장하고 싶다' 는 열망이 컸고, 혼자서 매일 같이 공부했지만 공부의 방향성이 올바른건지 성장을 하고 있는건지 전혀 알 수 없었다.
