--- a/_posts/2021-12-19-algorithm-boj-1427.md
+++ b/_posts/2021-12-19-algorithm-boj-1427.md
@@ -11,17 +11,17 @@ toc_sticky: ture
 
 배열을 정렬하는 것은 쉽다. 수가 주어지면, 그 수의 각 자리수를 내림차순으로 정렬해보자.
 
-### 입력
+## 입력
 
 첫째 줄에 정렬하려고 하는 수 N이 주어진다. N은 1,000,000,000보다 작거나 같은 자연수이다.
 
-### 출력
+## 출력
 
 첫째 줄에 자리수를 내림차순으로 정렬한 수를 출력한다.
 
-### Example
+## Example
 
-#### #1
+### #1
 ```java
 입력
 2143
@@ -30,7 +30,7 @@ toc_sticky: ture
 4321
 ```
 
-#### #2
+### #2
 ```java
 입력
 999998999
@@ -39,7 +39,7 @@ toc_sticky: ture
 999999998
 ```
 
-#### #3
+### #3
 ```java
 입력
 61423
@@ -48,7 +48,7 @@ toc_sticky: ture
 64321
 ```
 
-#### #4
+### #4
 ```java
 입력
 500613009
