--- a/_posts/2021-12-19-algorithm-boj-2609.md
+++ b/_posts/2021-12-19-algorithm-boj-2609.md
@@ -11,17 +11,17 @@ toc_sticky: ture
 
 두 개의 자연수를 입력받아 최대 공약수와 최소 공배수를 출력하는 프로그램을 작성하시오.
 
-### 입력
+## 입력
 
 첫째 줄에는 두 개의 자연수가 주어진다. 이 둘은 10,000이하의 자연수이며 사이에 한 칸의 공백이 주어진다.
 
-### 출력
+## 출력
 
 첫째 줄에는 입력으로 주어진 두 수의 최대공약수를, 둘째 줄에는 입력으로 주어진 두 수의 최소 공배수를 출력한다.
 
-### Example
+## Example
 
-#### #1
+### #1
 
 ```java
 입력
