--- a/_posts/2022-01-03-java-jvm.md
+++ b/_posts/2022-01-03-java-jvm.md
@@ -162,7 +162,7 @@ JVM Interpreter는 런타임 중에 바이트 코드를 한 라인씩 읽고 실
 > 여러 스레드의 작업을 동기화하고 주어진 시점에서 하나의 스레드만 리소스에 액세스할 수 있는지 확인해야 한다. 이 부분에서 monitors라는 개념을 사용하여 구현된다. Java의 각 객체는 스레드가 잠기거나 잠금을 해제할 수 있는 monitor와 연결된다. 이후 한 번에 하나의 스레드만 monitor에서 잠금을 유지할 수 있다.
 
 ---
-## Referenece
+# Referenece
 - [자바 가상 머신](https://namu.wiki/w/%EC%9E%90%EB%B0%94%20%EA%B0%80%EC%83%81%20%EB%A8%B8%EC%8B%A0)
 - [자바가머신(jvm)이란 무엇인가?](https://hanul-dev.netlify.app/java/%EC%9E%90%EB%B0%94%EA%B0%80%EB%A8%B8%EC%8B%A0(jvm)%EC%9D%B4%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%B8%EA%B0%80/)
 - [jvm 이란](https://medium.com/@lazysoul/jvm-%EC%9D%B4%EB%9E%80-c142b01571f2)
