docs : F-Lab 멘토링 6주차 회고 내용 일부 수정
- F-Lab 멘토링 6주차 회고 내용 일부 수정

--- a/_posts/2022-01-17-F-Lab-W06.md
+++ b/_posts/2022-01-17-F-Lab-W06.md
@@ -14,7 +14,7 @@ toc_sticky: ture
 ### 프로젝트 준비와 스터디
 5주차 멘토링 시간에 첫 프로젝트 주제를 Nginx를 모델로 한 가벼운 리버스 프록시 서버로 정했다.
 
-동료 멘티님과 주말 동안 각자 Nginx에 프로젝트의 주요 기능 정의를 하는 시간을 가졌다.
+동료 멘티님과 주말 동안 각자 Nginx에 대해 공부하고, 미팅을 통해 프로젝트의 주요 기능 정의를 하는 시간을 가졌다.
 
 그리고 멘티님과 함께 하기로 한 스터디가 있는데, '자바 병렬 프로그래밍'이라는 책을 매일 읽고 리뷰하는 스터디이다.
 
